Add notes to new.html.erb

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div>
   <p>A form for creating a new user</p>
-  <form action="/somepath" method="post">
+  <form action="/users#create" method="post">
     <input type="text" name="user[username]">
     <input type="text" name="user[email]">
     <input type="text" name="user[password]">
