--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <div>
-  <p>A form for creating a new user</p>
-  <%# The action attribute tells the form where to send the data to be processed. %>
-  <%# The method %>
-  <form action="/users(.:format)" method="post">
+    <%# The action attribute tells the form where to send the data to be processed.%>
+  <%# The method sets the kind of request being sent to the server.%>
+  <form action="/users(.:format)" method="post" accept-charset="UTF-8">
+    <legend>A form for creating a new user</legend>
     <input type="text" name="user[username]">
     <input type="text" name="user[email]">
     <input type="text" name="user[password]">
