Fix error generated by incorrect form action in new.html.erb

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div>
     <%# The action attribute tells the form where to send the data to be processed.%>
   <%# The method sets the kind of request being sent to the server.%>
-  <form action="/users(.:format)" method="post" accept-charset="UTF-8">
+  <form action="/users" method="post" accept-charset="UTF-8">
     <legend>A form for creating a new user</legend>
     <input type="text" name="user[username]">
     <input type="email" name="user[email]">
