--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,14 @@
-<%# The action attribute tells the form where to send the data to be processed.%>
-<%# The method sets the kind of request being sent to the server.%>
-<%# <form action="/users" method="post" accept-charset="UTF-8">
-  <legend>A form for creating a new user</legend>
-  <input type="text" name="user[username]">
-  <input type="email" name="user[email]">
-  <input type="password" name="user[password]"> %>
-  <%# <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"> %>
-  <%# <input type="submit" value="Submit This Form">
-</form> %>
+<!--<div>
+  Note that VSC default 'comment-out' does NOT work on erb documents for block comments.
+  Remember this technique going forward.
+  <%# The action attribute tells the form where to send the data to be processed.%>
+  <%# The method sets the kind of request being sent to the server.%>
+  <form action="/users" method="post" accept-charset="UTF-8">
+    <legend>A form for creating a new user</legend>
+    <input type="text" name="user[username]">
+    <input type="email" name="user[email]">
+    <input type="password" name="user[password]">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <input type="submit" value="Submit This Form">
+  </form>
+</div> -->
