Write soft-depreciated #form-tag block in new.html.erb

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,3 +12,14 @@
     <input type="submit" value="Submit This Form">
   </form>
 </div> -->
+
+<%# The following code block - countesy of PjSing22 - is soft depreciated. It is included only because this approach may be encountered in legacy systems. %>
+<%# <%= form_tag('/users', method: "post") do %> 
+  <%# <%= label_tag(:username, 'username') %> 
+  <%# <%= text_field_tag(:username) %> 
+  <%# <%= label_tag(:email, 'email') %> 
+  <%# <%= text_field_tag(:email) %> 
+  <%# <%= label_tag(:password, 'password') %> 
+  <%# <%= password_field_tag(:password) %> 
+  <%# <%= submit_tag('Submit') %> 
+<%# <% end %> 
