Write #form_with version of users/new.html.erb

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,3 +23,13 @@
   <%# <%= password_field_tag(:password) %> 
   <%# <%= submit_tag('Submit') %> 
 <%# <% end %> 
+
+<%= form_with(url: "/users", method: "post") do %>
+  <%= label_tag(:username, "Username:") %>
+  <%= text_field_tag(:username) %>
+  <%= label_tag(:email, "Email:") %>
+  <%= text_field_tag(:email) %>
+  <%= label_tag(:password, "Password:") %>
+  <%= text_field_tag(:password) %>
+  <%= submit_tag("Submit This Form") %>
+<% end %>
