Update #form_with to include #email_field

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -39,7 +39,7 @@ In theory, the above works. In practice, however, it does not return the informa
   <%= form.label(:username, "Username:") %>
   <%= form.text_field(:username) %>
   <%= form.label(:email, "Email:") %>
-  <%= form.text_field(:email) %>
+  <%= form.email_field(:email) %>
   <%= form.label(:password, "Password:") %>
   <%= form.password_field(:password) %>
   <%= form.submit("Submit This Form") %>
